# hello-nodec-game

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  README_JP.md  README_jp.md
apps/: CMakeLists.txt
apps/hello-nodec/: CMakeLists.txt
docs/: index.html  md__r_e_a_d_m_e.html  pages.html
docs/search/: all_0.js
resources/org.nodec.hello-nodec-game/materials/: pbr-defer-concrete.material  pbr-defer-rustediron2.material  proto-blue1.material  proto-blue2.material  proto-blue3.material  proto-brown.material  proto-cyan.material  proto-grey1.material  proto-grey2.material  proto-grey3.material  proto-grey4.material  proto-magenta.material  proto-olive.material  proto-orange.material  proto-pink.material  proto-purple.material  proto-red.material  proto-white.material  proto-yellow.material  skybox-planetary-earth.material
resources/org.nodec.hello-nodec-game/models/PavementPaintedConcrete3/: PavementPaintedConcrete3.material
resources/org.nodec.hello-nodec-game/models/alicia/: body_psd.material  eye_psd.material  face_psd.material  hair_alpha.material  hair_psd.material  other_alpha02.material  wear_psd.material
resources/org.nodec.hello-nodec-game/models/cube/: cube.material
resources/org.nodec.hello-nodec-game/models/primitives/: Default.material
resources/org.nodec.hello-nodec-game/models/retrotv/: Main.material  Screen.material
resources/org.nodec.hello-nodec-game/prefabs/: bullet.entity  main-scene.entity  nodec.entity  particle-light.entity  retro-tv.entity
resources/org.nodec.hello-nodec-game/scenes/: bullet.scene  main.scene  nodec.scene  particle-light.scene  serena.scene  temp.scene  text_a.scene  text_b.scene  text_c.scene
src/: app.cpp  app.hpp  bullet_system.hpp  light_particle.hpp  player_control_system.hpp
src/components/: bullet.hpp  player.hpp  player_control.hpp
src/editors/: player_editor.hpp
src/systems/: bullet_system.hpp  light_particle_system.hpp  player_control_system.hpp
windows/: .gitignore  project.sln
windows/apps__hello_nodec/: .gitignore  apps__hello_nodec.vcxproj  apps__hello_nodec.vcxproj.filters  shader.props
windows/modules__imelements/: modules__imelements.vcxproj  modules__imelements.vcxproj.filters
windows/modules__imgui/: modules__imgui.vcxproj  modules__imgui.vcxproj.filters
windows/modules__imguizmo/: modules__imguizmo.vcxproj  modules__imguizmo.vcxproj.filters
windows/nodec/: nodec.vcxproj  nodec.vcxproj.filters
windows/platforms__game_editor__main/: game_editor_interface.props  platforms__game_editor__main.vcxproj  platforms__game_editor__main.vcxproj.filters
windows/platforms__game_engine__common/: game_engine_common_impl.props  game_engine_common_interface.props  platforms__game_engine__common.vcxproj  platforms__game_engine__common.vcxproj.filters
